--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos = wcapi.get(\"orders?per_page=50\").json()\n"
+    "datos = wcapi.get(\"orders?per_page=100\").json()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def payment_name(method_pay):\n",
+    "    if method_pay == 'woo-mercado-pago-basic':\n",
+    "        return 'Mercado Pago'\n",
+    "    if method_pay == 'micuentawebstd':\n",
+    "        return 'Pago Link - Izipay'\n",
+    "    else:\n",
+    "        return 'Revisar'\n",
+    "    \n",
+    "\n",
+    "#'_billing_dni'\n",
+    "def get_meta_data(key,data):\n",
+    "    for meta_item in data['meta_data']:\n",
+    "        if meta_item['key'] == key:\n",
+    "            return meta_item['value']\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def get_payment_id(method_pay,data):\n",
+    "    if method_pay == 'woo-mercado-pago-basic':\n",
+    "        return get_meta_data('_Mercado_Pago_Payment_IDs',data)\n",
+    "    if method_pay == 'micuentawebstd':\n",
+    "        return get_meta_data('Transaction ID',data)\n",
+    "    else:\n",
+    "        return 'Revisar'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "row = []\n",
+    "    # order-shipped\n",
+    "    # if items['status'] != \"on-hold\":\n",
+    "\n",
     "\n",
     "for items in datos:\n",
     "\n",
@@ -102,27 +137,377 @@
     "    provincia = items['billing']['provincia'] \n",
     "    departamento = items['billing']['departamento']\n",
     "    monto = items['total']\n",
-    "    phone = items['billing']['phone']\n",
+    "    phone = items['billing']['phone'].replace(\" \",\"\")\n",
     "    sku = items['line_items'][0]['sku']\n",
-    "\n",
-    "\n",
+    "    email = items['billing']['email']\n",
+    "    payment_method = payment_name(items['payment_method'])\n",
+    "    dni = get_meta_data('_billing_dni',items)\n",
+    "    payment_number = str(get_payment_id(items['payment_method'],items))\n",
     "    \n",
-    "    row.append([id,status,registro,'-', nombre_completo,'-','-','-','-',address,'-',sku,distrito,provincia,departamento,monto,phone[-9:]])"
+    "    row.append([id,status,registro,dni, nombre_completo,'-','-','-','-','-',address,'-',distrito,provincia,departamento,sku,monto,phone[-9:],'-','-','1',email,'-',payment_method,'Capturado',payment_number])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9441</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>75201936</td>\n",
+       "      <td>Alison Mendoza</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1311.45</td>\n",
+       "      <td>945919968</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>alisonmendoza07@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Mercado Pago</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>75248049263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9442</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>75343926</td>\n",
+       "      <td>Angello Rodas</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1941.45</td>\n",
+       "      <td>940650285</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>awtzleko@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Mercado Pago</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>75253412051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9448</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-03</td>\n",
+       "      <td>73538875</td>\n",
+       "      <td>Jeremias Melo Huamán</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1549.00</td>\n",
+       "      <td>627303486</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>jeremiasmelo13@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>430796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9461</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-03</td>\n",
+       "      <td>71597134</td>\n",
+       "      <td>Claudio Arturo Curimnaya Gil</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2599.00</td>\n",
+       "      <td>992261999</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>claudiosdsk@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>120694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9463</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-03</td>\n",
+       "      <td>77243811</td>\n",
+       "      <td>Karla Miyan</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2728.95</td>\n",
+       "      <td>992184833</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>estefan.ll@hotmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Mercado Pago</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>75330586231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9468</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-04</td>\n",
+       "      <td>72201175</td>\n",
+       "      <td>Milene Isabel Dolci Ríos</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1549.00</td>\n",
+       "      <td>939207622</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>dolcimilene@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>586925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9476</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-04</td>\n",
+       "      <td>77702043</td>\n",
+       "      <td>Samira Cordero</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1399.00</td>\n",
+       "      <td>907846249</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>magalyrociobravofernandez@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>009811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9478</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-04</td>\n",
+       "      <td>46790190</td>\n",
+       "      <td>Lisette Limache</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1899.00</td>\n",
+       "      <td>977185256</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lisettel@outlook.es</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>052631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9483</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-04</td>\n",
+       "      <td>71656411</td>\n",
+       "      <td>sara paucar rojas</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2549.00</td>\n",
+       "      <td>977749458</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>paucarrojassara@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>085249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9488</td>\n",
+       "      <td>processing</td>\n",
+       "      <td>2024-04-05</td>\n",
+       "      <td>70069848</td>\n",
+       "      <td>José Antonio</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>...</td>\n",
+       "      <td>549.00</td>\n",
+       "      <td>900027422</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1</td>\n",
+       "      <td>youngkrony2018@gmail.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Pago Link - Izipay</td>\n",
+       "      <td>Capturado</td>\n",
+       "      <td>192141</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0           1           2         3                             4  5  6   \\\n",
+       "9  9441  processing  2024-04-02  75201936                Alison Mendoza  -  -   \n",
+       "8  9442  processing  2024-04-02  75343926                 Angello Rodas  -  -   \n",
+       "7  9448  processing  2024-04-03  73538875          Jeremias Melo Huamán  -  -   \n",
+       "6  9461  processing  2024-04-03  71597134  Claudio Arturo Curimnaya Gil  -  -   \n",
+       "5  9463  processing  2024-04-03  77243811                   Karla Miyan  -  -   \n",
+       "4  9468  processing  2024-04-04  72201175      Milene Isabel Dolci Ríos  -  -   \n",
+       "3  9476  processing  2024-04-04  77702043                Samira Cordero  -  -   \n",
+       "2  9478  processing  2024-04-04  46790190               Lisette Limache  -  -   \n",
+       "1  9483  processing  2024-04-04  71656411             sara paucar rojas  -  -   \n",
+       "0  9488  processing  2024-04-05  70069848                  José Antonio  -  -   \n",
+       "\n",
+       "  7  8  9   ...       16         17 18 19 20  \\\n",
+       "9  -  -  -  ...  1311.45  945919968  -  -  1   \n",
+       "8  -  -  -  ...  1941.45  940650285  -  -  1   \n",
+       "7  -  -  -  ...  1549.00  627303486  -  -  1   \n",
+       "6  -  -  -  ...  2599.00  992261999  -  -  1   \n",
+       "5  -  -  -  ...  2728.95  992184833  -  -  1   \n",
+       "4  -  -  -  ...  1549.00  939207622  -  -  1   \n",
+       "3  -  -  -  ...  1399.00  907846249  -  -  1   \n",
+       "2  -  -  -  ...  1899.00  977185256  -  -  1   \n",
+       "1  -  -  -  ...  2549.00  977749458  -  -  1   \n",
+       "0  -  -  -  ...   549.00  900027422  -  -  1   \n",
+       "\n",
+       "                                    21 22                  23         24  \\\n",
+       "9            alisonmendoza07@gmail.com  -        Mercado Pago  Capturado   \n",
+       "8                   awtzleko@gmail.com  -        Mercado Pago  Capturado   \n",
+       "7             jeremiasmelo13@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "6                claudiosdsk@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "5               estefan.ll@hotmail.com  -        Mercado Pago  Capturado   \n",
+       "4                dolcimilene@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "3  magalyrociobravofernandez@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "2                  lisettel@outlook.es  -  Pago Link - Izipay  Capturado   \n",
+       "1            paucarrojassara@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "0             youngkrony2018@gmail.com  -  Pago Link - Izipay  Capturado   \n",
+       "\n",
+       "            25  \n",
+       "9  75248049263  \n",
+       "8  75253412051  \n",
+       "7       430796  \n",
+       "6       120694  \n",
+       "5  75330586231  \n",
+       "4       586925  \n",
+       "3       009811  \n",
+       "2       052631  \n",
+       "1       085249  \n",
+       "0       192141  \n",
+       "\n",
+       "[10 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame(row)\n",
-    "df = df.sort_values(by=0, ascending=True)"
+    "df = df.sort_values(by=0, ascending=True)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
